MIFOS-4526: changing Tomcat to Jetty container with cargo to be used for acceptance tests